--- a/css/styles.css
+++ b/css/styles.css
@@ -499,6 +499,76 @@ img {
   background-color: rgba(255, 255, 255, 0.1);
 }
 
+/*footer form*/
+.container-subscription {
+  display: flex;
+  top: 72px;
+  width: 570px;
+  height: 86px;
+  position: relative;
+  margin-left: 93px;
+  }
+  .footer-tittle-form {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: calc(16 / 14);
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #FFFFFF
+}
+.subscription-form-grup {
+  display: flex;
+  position: absolute;
+  bottom: 0px;
+  gap: 12px;
+}
+.subscription-form-input{
+  display: block;
+  padding-left: 16px;
+  width: 358px;
+  height: 50px;
+  background-color: inherit;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: calc(20 / 16);
+  align-items: center;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.subscription-form-input:hover
+ {
+  border-color: #2196F3;
+}
+.footer-form-btn {
+  gap: 10px;
+  padding: 0px;
+  border: none;
+  width: 200px;
+    height: 50px;
+    background: #2196F3;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    cursor: pointer;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: calc(30 / 16);
+      display: inline-flex;
+      align-items: center;
+      text-align: center;
+      justify-content: center;
+      letter-spacing: 0.06em;
+     color: #FFFFFF;
+}
+
+
+
 /*portfolio section*/
 .portfolio {
   padding-top: 94px;
