--- a/css/styles.css
+++ b/css/styles.css
@@ -540,7 +540,7 @@ img {
   align-items: center;
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .subscription-form-input:hover {
   border-color: #2196f3;
@@ -751,6 +751,8 @@ img {
   position: relative;
   display: block;
   margin-bottom: 10px;
+
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .register-form-label {
   display: block;
@@ -763,19 +765,37 @@ img {
   color: #757575;
 }
 .register-form-input,
-.register-form-massage {
+.register-form-message {
+  display: block;
   width: 448px;
   height: 40px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   padding-left: 42px;
+  cursor: pointer;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.register-form-wrap:focus-within {
+  fill: #2196f3;
+  border-color: #2196f3;
+}
+.register-form-wrap:hover {
+  fill: #2196f3;
+  border-color: #2196f3;
+}
+.register-form-input:hover {
+  border-color: #2196f3;
+}
+.register-form-message:hover,
+.register-form-message:focus {
+  border-color: #2196f3;
 }
 .register-form-icon {
   position: absolute;
   bottom: 11px;
   left: 12px;
 }
-.register-form-massage {
+.register-form-message {
   width: 448px;
   height: 120px;
   resize: none;
@@ -785,6 +805,7 @@ img {
   line-height: calc(14 / 12);
   letter-spacing: 0.01em;
   color: rgba(117, 117, 117, 0.5);
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .register-form-agreement {
   display: flex;
