--- a/css/styles.css
+++ b/css/styles.css
@@ -519,6 +519,7 @@ img {
   text-transform: uppercase;
   color: #ffffff;
 }
+
 .subscription-form-grup {
   display: flex;
   position: absolute;
@@ -546,11 +547,13 @@ img {
   border-color: #2196f3;
 }
 .footer-form-btn {
+  position: absolute;
+  right: 0px;
+  bottom: 0px;
   gap: 10px;
   padding: 0px;
   border: none;
-  width: 200px;
-  height: 50px;
+  padding: 10px 28px;
   background: #2196f3;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
@@ -745,14 +748,16 @@ img {
   color: #212121;
 }
 .register-form-group {
-  margin-bottom: 18px;
+  margin-bottom: 20px;
 }
 .register-form-wrap {
   position: relative;
   display: block;
   margin-bottom: 10px;
-
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+} 
+.register-form-wrap:last-child {
+  margin-bottom: 0px;
 }
 .register-form-label {
   display: block;
